Page layout tidied up

--- a/templates/home/_about.html
+++ b/templates/home/_about.html
@@ -1,6 +1,6 @@
-<div class="container container-main">
+<div class="container-padded">
     <section class="white">
-        <div class="row">
+        <div class="container container-padded">
             <div class="col-md-11">
                 <h1>{{ _('About') }}</h1>
                 
@@ -20,7 +20,7 @@
     </section>
                    
     <section class="grey">
-        <div class="row">
+        <div class="container container-padded">
             <div class="col-md-11">
                 <h1>{{ _('Technology') }}</h1>
                 
@@ -32,16 +32,14 @@
     </section>
                 
     <section class="white">
-        <div class="row">
+        <div class="container container-padded">
             <div class="col-md-11">
                 <h1 id="contact">{{ _('Contact information') }}</h1>
                 <ul>
-                    <li>Email: <a href="mailto:info@pybossa.com">info@pybossa.com</a></li>
-                    <li><p>{{ _('Report any bugs, issues or improvements:') }} 
-                        <a class="btn btn-xs" href="https://github.com/alexandermendes/BL-pybossa-theme/issues">
-                            <i class="glyphicon glyphicon-github"></i>{{ _('Github Issues') }}
-                        </a>
-                        </li>            
+                    <li>For more info, email: <a href="mailto:info@pybossa.com">info@pybossa.com</a></li>
+                    <li>{{ _('Report any bugs, issues or improvements:') }} 
+                        <a href="https://github.com/alexandermendes/BL-pybossa-theme/issues">{{ _('Github Issues') }}</a>
+                    </li>            
                 </ul>
             </div>
         </div>
