Fixed layout of error pages

--- a/templates/403.html
+++ b/templates/403.html
@@ -2,8 +2,8 @@
 {% set active_page = "support" %}
 
 {% block content %}
-    <div class="container container-main">
-        <div class="row">
+    <div class="container-padded">
+        <div class="container container-padded">
             <div class="col-md-12">
                 <h1><strong>Forbidden</strong></h1>
                 <p class="lead">You do not have the permission to access the requested resource.</p>
