--- a/templates/404.html
+++ b/templates/404.html
@@ -2,8 +2,8 @@
 {% set active_page = "support" %}
 
 {% block content %}
-    <div class="container container-main">
-        <div class="row">
+    <div class="container-padded">
+        <div class="container container-padded">
             <h1>Page not found!</h1>
             <p class="lead">We're sorry, but we can't find the page that you're looking for.</p>
             <a id="btnHome" href="{{url_for('home.home')}}" class="btn btn-lg" style="display:none;"> 
@@ -15,14 +15,14 @@
                 Go Back</a>
         </div>
     </div>
-<script>
-    console.log(history.length);
-    if (history.length > 1) {
-        $("#btnBack").show();
-    }
-    else {
-        $("#btnHome").show();
-    }
-
-</script>
+    <script>
+        console.log(history.length);
+        if (history.length > 1) {
+            $("#btnBack").show();
+        }
+        else {
+            $("#btnHome").show();
+        }
+    
+    </script>
 {% endblock %}
