--- a/templates/500.html
+++ b/templates/500.html
@@ -2,13 +2,13 @@
 {% set active_page = "support" %}
 
 {% block content %}
-    <div class="container container-main">
-        <div class="row">
+    <div class="container-padded">
+        <div class="container container-padded">
             <div class="col-md-12">
                 <h1>Ooops, Something's broken</h1>
                 <p class="lead">It looks as though there's a problem with our system.</p>
                 <p class="lead">We will try to fix it as soon as we can.</p>
-        
+            
                 <a id="btnHome" href="{{url_for('home.home')}}" class="btn btn-lg" style="display:none;"> 
                     <i class="glyphicon glyphicon-home"></i>
                     Go Home
@@ -19,14 +19,14 @@
             </div>
         </div>
     </div>
-<script>
-    console.log(history.length);
-    if (history.length > 1) {
-        $("#btnBack").show();
-    }
-    else {
-        $("#btnHome").show();
-    }
-
-</script>
+    <script>
+        console.log(history.length);
+        if (history.length > 1) {
+            $("#btnBack").show();
+        }
+        else {
+            $("#btnHome").show();
+        }
+    
+    </script>
 {% endblock %}
