--- a/templates/401.html
+++ b/templates/401.html
@@ -2,8 +2,8 @@
 {% set active_page = "support" %}
 
 {% block content %}
-    <div class="container container-main">
-        <div class="row">
+    <div class="container-padded">
+        <div class="container container-padded">
             <div class="col-md-12">
                 <h1><strong>Unauthorized</strong></h1>
                 <p class="lead">You are not authorized to access the URL requested.</p>
