--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -486,7 +486,7 @@ ul.users li a {
     width: auto !important;
   }
   
-  .navbar-default .navbar-nav>.active>a,
+.navbar-default .navbar-nav>.active>a,
 .navbar-default .navbar-nav>.active>a:focus,
 .navbar-default .navbar-nav>.active>a:hover {
     background-color: #D00000;
@@ -500,7 +500,7 @@ ul.users li a {
   color: #404040;
 }
 
-navbar-fixed-top {
+.navbar-fixed-top {
   padding-top: 10px;
   padding-bottom: 10px;
   background-color: rgba(255,255,255,1);
