--- a/templates/_navbar.html
+++ b/templates/_navbar.html
@@ -1,4 +1,4 @@
-<div class="navbar navbar-fixed-top navbar-default {% if active_page != 'index' %} opaque {% endif %}">
+<div class="navbar navbar-fixed-top navbar-default">
         <div class="container">
           <div class="navbar-header">
           <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">
