Minor content and layout updates

--- a/templates/home/_about.html
+++ b/templates/home/_about.html
@@ -5,7 +5,7 @@
                 <h1>{{ _('About') }}</h1>
                 
                 <p>{{ brand }} is a crowd-sourcing platform with the ultimate goal of making important research material more
-                easily accesible to a worldwide audience.</p>
+                readily available to a wider audience.</p>
                     
                 <p>Each project at {{ brand }} contains a collection of tasks related to a specific area of research. These tasks
                 require human intelligence and are not things that can be accurately processed by computers. While
@@ -19,7 +19,7 @@
         </div>
     </section>
                    
-    <section class="grey">
+    <section class="mid-grey">
         <div class="container container-padded">
             <div class="col-md-11">
                 <h1>{{ _('Technology') }}</h1>
