--- a/templates/applications/importers/epicollect.html
+++ b/templates/applications/importers/epicollect.html
@@ -17,7 +17,7 @@
       <form class="form-horizontal" method="post" action="{{ url_for(target, short_name=app.short_name) }}">
         <fieldset>
         {{ form.hidden_tag() }}
-        <span class="help-inline">{{_('Please provide an EpiCollect Plus project name to import its data for')}} {{ active_app }}.<br/> {{_('For more information, please look at')}} <a href="http://docs.pybossa.com/en/latest/user/overview.html#importing-the-tasks-via-the-built-in-csv-task-creator" target="_blank">{{_('the documentation')}}.</a></span>
+        <span class="help-block">{{_('Please provide an EpiCollect Plus project name to import its data for')}} {{ active_app }}.<br/> {{_('For more information, please look at')}} <a href="http://docs.pybossa.com/en/latest/user/overview.html#importing-the-tasks-via-the-built-in-csv-task-creator" target="_blank">{{_('the documentation')}}.</a></span>
           {{ render_field(form.epicollect_project, class_="input-block-level",
           placeholder=_('The name of the public EpiCollect Plus project')) }}
           {{ render_field(form.epicollect_form, class_="input-block-level", placeholder=_('The name of the project\'s form')) }}
