Forgotten password page designs updated

--- a/templates/account/password_forgot.html
+++ b/templates/account/password_forgot.html
@@ -1,18 +1,24 @@
 {% extends "base.html" %}
 
 {% block content %}
-{% from "_formhelpers.html" import render_field %}
-
-  <legend>{{ _('Reset your Password') }}</legend>
-  <form method="post" class="form-horizontal">
-      <fieldset>
-      {{ form.hidden_tag() }}
-      {{ render_field(form.email_addr, placeholder= _('my e-mail') ) }}
-      <div class="form-actions">
-          <input type="submit" value="{{_('Reset my Password')}}" class="btn btn-primary btn-lg" />
-        <a href="{{ url_for('account.signin') }}" class="btn">{{ _('Cancel') }}</a>
-      </div>
-      </fieldset>
-  </form>
+        
+<div class="container container-main">
+    {% from "_formhelpers.html" import render_field %}
+        
+    <div class="col-xs-12 col-sm-6 col-sm-offset-3">
+        <h4 class="text-center">{{ _('Reset your Password') }}</h4>
+        <form method="post" role="form">
+            <fieldset>
+          {{ form.hidden_tag() }}
+          {{ render_field(form.email_addr, placeholder= _('Enter your email address'), class="form-control" ) }}
+          
+                <div class="pull-right" role="group">
+                    <a href="{{ url_for('account.signin') }}" class="btn btn-default">{{ _('Cancel') }}</a>
+                    <input type="submit" value="{{_('Reset Password')}}" class="btn btn-success" />
+                </div>
+            </fieldset>
+        </form>
+    </div>
+</div>
 {% endblock %}
 
