--- a/templates/account/password_reset.html
+++ b/templates/account/password_reset.html
@@ -1,19 +1,27 @@
 {% extends "base.html" %}
 
 {% block content %}
+        
+<div class="container container-main">
+
 {% from "_formhelpers.html" import render_field %}
 
-  <legend>Reset your Password</legend>
-  <form method="post" class="form-horizontal">
-      <fieldset>
+    
+    <div class="col-xs-12 col-sm-6 col-sm-offset-3">
+        <h4 class="text-center">Reset your Password</h4>
+        <form method="post" class="form-horizontal">
+            <fieldset>
       {{ form.hidden_tag() }}
-      {{ render_field(form.new_password, placeholder=_('my new password')) }}
-      {{ render_field(form.confirm, placeholder=_('my new password again')) }}
-      <div class="form-actions">
-        <input type="submit" value="Save the changes" class="btn btn-primary btn-lg" />
-        <a href="{{ url_for('account.profile', name=current_user.name) }}" class="btn">Cancel</a>
-      </div>
-      </fieldset>
-  </form>
+      {{ render_field(form.new_password, placeholder=_('my new password'), class="form-control") }}
+      {{ render_field(form.confirm, placeholder=_('my new password again'), class="form-control") }}
+      
+                <div class="pull-right" role="group">
+                    <a href="{{ url_for('account.profile', name=current_user.name) }}" class="btn btn-default">{{ _('Cancel') }}</a>
+                    <input type="submit" value="{{_('save changes')}}" class="btn btn-success" />
+                </div>
+            </fieldset>
+        </form>
+    </div>
+</div>
 {% endblock %}
 
