--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -1043,3 +1043,23 @@ display: flex;
 align-items: center;
 justify-content: center;
 }
+
+/**
+ * Alert Messages
+ */
+ 
+ .alert {
+  margin-top: 100px;
+  margin-bottom: -100px;
+ }
+
+.alert-messages {
+  width: 50%;
+  margin-left: 25%;
+}
+
+.alert-error {
+  color: #a94442;
+  background-color: #f2dede;
+  border-color: #ebccd1;
+}
