--- a/templates/account/register.html
+++ b/templates/account/register.html
@@ -1,31 +1,39 @@
 {% extends "base.html" %}
 
 {% block content %}
+    
+<div class="container container-main">
 {% from "_formhelpers.html" import render_field %}
-<p style="padding-top:5px;">
-<span class="label label-warning"><i class="glyphicon glyphicon-bullhorn"></i> {{ _('Note') }}</span> 
-    {{ _('By click the') }} 
-    <strong>{{ _('Create account button') }}
-    </strong>{{ _('below you are agreeing to the') }}
-    <a target="blank" href={{terms_of_use | safe}}>{{ _('terms of use') }} </a>{{ _('and') }} 
-    <a href={{data_use | safe}}>{{ _('data') }}</a>.
-</p>
 
-  <legend>{{ _('Create an account') }}</legend>
-  <form method="post" class="form-horizontal" action="{{ url_for('account.register') }}">
+    <div class="col-xs-12 col-sm-6 col-sm-offset-3">
+        <h4 class="text-center">{{ _('Create an account') }}</h4>
+        <form method="post" role="form" action="{{ url_for('account.register') }}">
       {{ form.hidden_tag() }}
-      <fieldset>
-      {{ render_field(form.fullname, placeholder= _('my full name')) }}
-      {{ render_field(form.name, placeholder= _('myusername')) }}
-      {{ render_field(form.email_addr, placeholder= _('hello@mywebsite.org')) }}
-      {{ render_field(form.password, placeholder= _('my secret password')) }}
-      {{ render_field(form.confirm, placeholder= _('my secret password')) }}
-      <div class="form-actions">
-        <input type="submit" value="{{ _('Create an account') }}" class="btn btn-primary btn-lg" />
-        <input type="reset" value="{{ _('Cancel') }}" class="btn" />
-      </div>
-      </fieldset>
-  </form>
+      
+            <fieldset>
+      {{ render_field(form.fullname, placeholder= _('Full Name'), class="form-control") }}
+      {{ render_field(form.name, placeholder= _('Username'), class="form-control") }}
+      {{ render_field(form.email_addr, placeholder= _('Email'), class="form-control") }}
+      {{ render_field(form.password, placeholder= _('Password'), class="form-control") }}
+      {{ render_field(form.confirm, placeholder= _('Confirm Password'), class="form-control") }}
+      
+                <div class="pull-right" role="group">
+                    <input type="reset" value="{{ _('Cancel') }}" class="btn btn-default" />
+                    <input type="submit" value="{{_('Create Account')}}" class="btn btn-success" />
+                </div>
+            </fieldset>
+        </form>
+        <div class="padding-top">
+            <p class="text-center muted">
+                    {{ _('By clicking the') }} 
+                <strong>{{ _('Create Account') }}</strong> {{ _('button you are agreeing to
+                    our') }} 
+                <a href={{url_for('help.tos')}}>{{ _('terms of use') }}</a>.
+                
+            </p>
+        </div>
+    </div>
+</div>
 <script src="{{url_for('static', filename='vendor/jquery.textchange.min.js')}}" type="text/javascript"></script>
 <script src="{{url_for('static', filename='js/forms.js')}}" type="text/javascript"></script>
 {% endblock %}
