--- a/templates/_navbar.html
+++ b/templates/_navbar.html
@@ -17,16 +17,16 @@
             {% include '_gcs_form.html' ignore missing %}
           {% if current_user.is_authenticated() %}
             <ul class="nav navbar-nav navbar-right">
-                <li {% if active_page == 'profile' %} class="active" {% endif %}><a href="#" data-toggle="dropdown" class="dropdown-toggle"><i class="icon glyphicon glyphicon-user"></i> {{ current_user.name | truncate(6,true) }} <span class="caret"></span></a>  <ul class="dropdown-menu">
-                    <li><a href="{{ url_for('account.profile', name=current_user.name) }}"><i class="icon glyphicon glyphicon-user"></i> {{ _('My Profile') }}</a></li>
-                    <li><a href="{{ url_for('account.applications', name=current_user.name) }}"><i class="icon glyphicon glyphicon-th-large"></i> {{ _('My Projects') }}</a></li>
-                    <li><a href="{{ url_for('account.update_profile', name=current_user.name) }}"><i class="icon glyphicon glyphicon-cog"></i> {{ _('My Settings') }}</a></li>
+                <li class="nav-link"><a href="#" data-toggle="dropdown" class="dropdown-toggle"><i class="icon glyphicon glyphicon-user"></i> {{ current_user.name | truncate(6,true) }} <span class="caret"></span></a>  <ul class="dropdown-menu">
+                    <li class="nav-link"><a href="{{ url_for('account.profile', name=current_user.name) }}"><i class="icon glyphicon glyphicon-user"></i> {{ _('My Profile') }}</a></li>
+                    <li class="nav-link"><a href="{{ url_for('account.applications', name=current_user.name) }}"><i class="icon glyphicon glyphicon-th-large"></i> {{ _('My Projects') }}</a></li>
+                    <li class="nav-link"><a href="{{ url_for('account.update_profile', name=current_user.name) }}"><i class="icon glyphicon glyphicon-cog"></i> {{ _('My Settings') }}</a></li>
                     {% if current_user.admin == 1 %}
                     <li class="divider"></li>
-                    <li><a href="{{ url_for('admin.index') }}"><i class="icon glyphicon glyphicon-cog"></i> {{ _('Admin Site') }}</a></li>
+                    <li class="nav-link"><a href="{{ url_for('admin.index') }}"><i class="icon glyphicon glyphicon-cog"></i> {{ _('Admin Site') }}</a></li>
                     {% endif %}
                     <li class="divider"></li>
-                  <li><a href="{{ url_for('account.signout') }}"><i class="icon glyphicon glyphicon-off"></i> {{ _('Sign Out') }}</a></li>
+                  <li class="nav-link"><a href="{{ url_for('account.signout') }}"><i class="icon glyphicon glyphicon-off"></i> {{ _('Sign Out') }}</a></li>
                 </ul>
               </li>
             </ul>
